--- a/debs/SPECS/3.12.0/wazuh-manager/debian/changelog
+++ b/debs/SPECS/3.12.0/wazuh-manager/debian/changelog
@@ -4,6 +4,12 @@ wazuh-manager (3.12.0-RELEASE) stable; urgency=low
 
  -- Wazuh, Inc <info@wazuh.com>  Tue, 7 Jan 2020 10:20:48 +0000
 
+wazuh-manager (3.11.15-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>   Fri, 17 Apr 2020 12:34:53 +0000 
+
 wazuh-manager (3.11.2-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
